# BratvaEngine

./: .gitignore  CMakeLists.txt  data.cpp  data.h  debug_macros.h  game_loop.cpp  game_loop.h  gpu_compute.cpp  gpu_compute.h  main.cpp  window.cpp  window.h
Graphics/: shaders.cpp  shaders.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
Input/: Mouse.cpp  Mouse.h
Resources/Shaders/: geo_frag.glsl  geo_vert.glsl  geometry.glsl
TestGraphics/: CircleRenderer.h  WireframeRenderer.cpp  WireframeRenderer.h
Util/: Mat4.cpp  Mat4.h  camera.cpp  camera.h  transform.cpp  transform.h
